Refactors TPG changes into individual files

--- a/python-scripts/piece_wise_fit.ipynb
+++ b/python-scripts/piece_wise_fit.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s0/hmlp5rbd1jq4_4kj2zmc89g80000gn/T/ipykernel_3069/447769128.py:59: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/var/folders/s0/hmlp5rbd1jq4_4kj2zmc89g80000gn/T/ipykernel_32881/3579231484.py:59: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  image = imageio.imread(filename)\n"
      ]
     },
@@ -32,7 +32,7 @@
     "end = 40\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv(\"../new-residual-fit.csv\")\n",
+    "df = pd.read_csv(\"../residuals.csv\")\n",
     "\n",
     "# Identify the relevant columns\n",
     "x_cols = [f\"x{i}\" for i in range(11)]\n",
@@ -62,7 +62,7 @@
     "        ax.plot(gen_df[x_cols[0]][start:end], gen_df[y_col][start:end], label='Truth', color='black')\n",
     "        \n",
     "        # Plot the prediction values\n",
-    "        ax.plot(gen_df[x_cols[0]][start:end], gen_df[p_col][start:end], label='Prediction', linestyle='--')\n",
+    "        ax.plot(gen_df[x_cols[0]][start:end], gen_df[p_col][start:end], label='Prediction', color='red', linestyle='--')\n",
     "        \n",
     "        ax.set_ylabel(f\"{y_col} / {p_col}\")\n",
     "        ax.set_ylim(y_min, y_max)  # Set fixed y-axis limits\n",
@@ -79,7 +79,7 @@
     "    frames.append(filename)\n",
     "\n",
     "# Create the GIF from the saved frames\n",
-    "with imageio.get_writer('fit_evolution.gif', mode='I', fps=5) as writer:\n",
+    "with imageio.get_writer('fit_evolution.gif', mode='I', fps=2) as writer:\n",
     "    for filename in frames:\n",
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)\n",
